--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "express-rate-limit": "^5.2.3",
     "helmet": "^4.4.1",
     "hpp": "^0.2.3",
+    "install": "^0.13.0",
     "jdb": "^0.5.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.9",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.17",
+    "slugify": "^1.4.6",
     "validator": "^13.5.2",
     "xss-clean": "^0.1.1"
   },
